--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
     "react-scripts": "5.0.1",
+    "swiper": "^11.0.5",
     "typeface-roboto": "^1.1.13"
   },
   "scripts": {
